Fix EZP-22124: inline image alignment is not respected

--- a/design/admin/stylesheets/core.css
+++ b/design/admin/stylesheets/core.css
@@ -594,6 +594,16 @@ div.object-center, table.object-center
     text-align: center;
 }
 
+.embed-inline-left
+{
+    float: left;
+}
+
+.embed-inline-right
+{
+    float: right;
+}
+
 .float-break
 {
     height: 1%; /* Fix for IE */
